# paper_track

./: .gitignore  ARXIV_CATEGORIES.md  CLAUDE.md  README.md  USAGE_EXAMPLES.md  main.py  pyproject.toml  requirements.txt
.kiro/specs/paper-tracker-analyzer/: design.md  requirements.md  tasks.md
src/: __init__.py  config_manager.py  content_extractor.py  error_handler.py  llm_client.py  logging_config.py  models.py  paper_fetcher.py  report_generator.py  scholar_client.py
